MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Junction_Object__c/Sales_Order_Junction_Object__c.object-meta.xml
<CustomObject>
    <label>Sales Order Junction Object</label>
    <nameField>
        <displayFormat>SOJO-{0000}</displayFormat>
        <label>Sales Order Junction Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Junction Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>