MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Junction_Object__c/fields/Instalment_Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Amount_1__c</fullName>
    <label>Instalment Amount 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>