MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Junction_Object__c/fields/JO_2__c.field-meta.xml
<CustomField>
    <fullName>JO_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JO 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>