MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Junction_Object__c/fields/Joint_Owner_3_Share__c.field-meta.xml
<CustomField>
    <fullName>Joint_Owner_3_Share__c</fullName>
    <label>Joint Owner 3 Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>