MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Junction_Object__c/fields/Primary_Owner_Share__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner_Share__c</fullName>
    <formula>1 - (Total_Joint_Owner_Share__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Owner Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>