MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Junction_Object__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Sales Order Junction Objects</relationshipLabel>
    <relationshipName>Sales_Order_Junction_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>