MODON MRE BPDEV/force-app/main/default/objects/Sales_Order_Junction_Object__c/fields/Total_Joint_Owner_Share__c.field-meta.xml
<CustomField>
    <fullName>Total_Joint_Owner_Share__c</fullName>
    <label>Total Joint Owner Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>